2006-05-30  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* dist-module.pl: change default CVS repository (and distribution)

2006-03-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* dist-module.pl: Use the new arguments to 
	Fink::Bootstrap::modify_description.