@@ -1,3 +1,8 @@
+2006-06-17  Dave Morrison  <dmrrsn@users.sourceforge.net>
+
+	* dist-module.pl: don't throw an error if the module has no *.info.in
+	file (such as dists/10.4 or script/10.4-update)
+
 2006-05-30  Dave Morrison  <dmrrsn@users.sourceforge.net>
 
 	* dist-module.pl: change default CVS repository (and distribution)
